--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "spatie/laravel-permission": "^6.21"
     },
     "require-dev": {
+        "brianium/paratest": "^7.8",
         "fakerphp/faker": "^1.23",
         "laravel-lang/lang": "^15.25",
         "laravel/pail": "^1.2.2",
