--- a/composer.json
+++ b/composer.json
@@ -13,14 +13,16 @@
     },
     "require-dev": {
         "brianium/paratest": "^7.8",
-        "fakerphp/faker": "^1.23",
+        "codedungeon/phpunit-result-printer": "^0.1.0",
+        "fakerphp/faker": "^1.24",
         "laravel-lang/lang": "^15.25",
         "laravel/pail": "^1.2.2",
         "laravel/pint": "^1.24",
         "laravel/sail": "^1.41",
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.6",
-        "phpunit/phpunit": "^11.5.3"
+        "phpunit/phpunit": "^11.5.3",
+        "spatie/phpunit-watcher": "^1.24"
     },
     "autoload": {
         "psr-4": {
